--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 
       <div class="inner-bottom">
         <div class="inner-copyright">
-          © 2023 28Tech. All rights reserved.
+          © 2023 Hune. All rights reserved.
         </div>
         <div class="inner-logo">
           <a href="index.html">
