add file js and create js menu-mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-  
+
   <header class="header">
     <div class="container">
       <div class="inner-wrap">
@@ -40,6 +42,10 @@
               <a href="#">Liên Hệ</a>
             </li>
           </ul>
+          <!-- overlay -->
+          <div class="inner-overlay">
+            <i class="fa-solid fa-circle-xmark"></i>
+          </div>
         </nav>
 
         <!-- search-menu-mobile -->
@@ -78,7 +84,8 @@
             </div>
           </h1>
           <div class="inner-desc">
-            Có một con thú cưng đồng nghĩa với việc bạn có thêm niềm vui mới. Chúng tôi có hơn 200 con thú cưng khác nhau có thể đáp ứng nhu cầu của bạn!
+            Có một con thú cưng đồng nghĩa với việc bạn có thêm niềm vui mới. Chúng tôi có hơn 200 con thú cưng khác
+            nhau có thể đáp ứng nhu cầu của bạn!
           </div>
           <div class="inner-buttons">
             <a href="#" class="button-outline">
@@ -108,17 +115,17 @@
     <div class="container">
       <div class="box-heading">
         <div class="inner-left">
-            <div class="inner-sub-title">
-              Có gì mới?
-            </div>
-            <h2 class="inner-title">
-              một số vật nuôi của chúng tôi
-            </h2>
+          <div class="inner-sub-title">
+            Có gì mới?
+          </div>
+          <h2 class="inner-title">
+            một số vật nuôi của chúng tôi
+          </h2>
         </div>
 
         <div class="inner-right">
-            <a href="#" class="button-outline">Xem thêm<i class="fa-solid fa-angle-right"></i>
-            </a>
+          <a href="#" class="button-outline">Xem thêm<i class="fa-solid fa-angle-right"></i>
+          </a>
         </div>
       </div>
       <div class="inner-wrap">
@@ -332,7 +339,8 @@
             </div>
           </h2>
           <div class="inner-desc">
-            Có một con thú cưng đồng nghĩa với việc bạn có thêm niềm vui mới. Chúng tôi có hơn 200 con thú cưng khác nhau có thể đáp ứng nhu cầu của bạn!
+            Có một con thú cưng đồng nghĩa với việc bạn có thêm niềm vui mới. Chúng tôi có hơn 200 con thú cưng khác
+            nhau có thể đáp ứng nhu cầu của bạn!
           </div>
           <div class="inner-buttons">
             <a href="#" class="button-outline">
@@ -351,88 +359,92 @@
   <!-- section-4 -->
   <section class="section-4">
     <div class="container">
-        <div class="box-heading">
-            <div class="inner-left">
-                <div class="inner-sub-title">
-                    Có thể bạn đã biết?
-                </div>
-                <h2 class="inner-title">
-                    Kiến thức thú cưng hữu ích
-                </h2>
-            </div>
-
-            <div class="inner-right">
-                <a href="#" class="button-outline">Xem thêm<i class="fa-solid fa-angle-right"></i>
-                </a>
-            </div>
+      <div class="box-heading">
+        <div class="inner-left">
+          <div class="inner-sub-title">
+            Có thể bạn đã biết?
+          </div>
+          <h2 class="inner-title">
+            Kiến thức thú cưng hữu ích
+          </h2>
         </div>
-        <div class="inner-wrap">
-            <div class="inner-item">
-                <div class="inner-image">
-                    <img src="/Lesson 7/Project-1/asset/img/section-4-img-1.jpg" alt="">
-                </div>
-                <div class="inner-content">
-                    <div class="inner-tag">
-                        Kiến thức thú cưng
-                    </div>
 
-                    <h3 class="inner-title">
-                        Pomeranian là gì? Cách nhận biết chó Pomeranian
-                    </h3>
-
-                    <p class="inner-desc">
-                        Pomeranian hay còn gọi là chó Pomeranian (chó Pom) luôn nằm trong top những thú cưng dễ thương nhất. Không chỉ vậy, giống chó xiếc nhỏ nhắn, đáng yêu, thông minh, thân thiện và khéo léo.
-                    </p>
-                </div>
-            </div>
-
-            <div class="inner-item">
-                <div class="inner-image">
-                    <img src="/Lesson 7/Project-1/asset/img/section-4-img-2.jpg" alt="">
-                </div>
-                <div class="inner-content">
-                    <div class="inner-tag">
-                        Kiến thức thú cưng
-                    </div>
-
-                    <h3 class="inner-title">
-                        Pomeranian là gì? Cách nhận biết chó Pomeranian
-                    </h3>
-
-                    <p class="inner-desc">
-                        Việc chia khẩu phần ăn cho chó thoạt nghe có vẻ đơn giản nhưng có một số quy tắc bạn nên biết để chó cưng dễ dàng hấp thụ các chất dinh dưỡng trong khẩu phần ăn. Dành cho những người mới bắt đầu nuôi chó, đặc biệt là chó con mới sinh có sức đề kháng tương đối yếu.
-                    </p>
-                </div>
-            </div>
-
-            <div class="inner-item">
-                <div class="inner-image">
-                    <img src="/Lesson 7/Project-1/asset/img/section-4-img-3.jpg" alt="">
-                </div>
-                <div class="inner-content">
-                    <div class="inner-tag">
-                        Kiến thức thú cưng
-                    </div>
-
-                    <h3 class="inner-title">
-                        Pomeranian là gì? Cách nhận biết chó Pomeranian
-                    </h3>
-
-                    <p class="inner-desc">
-                        Chó cắn là hiện tượng phổ biến trong quá trình phát triển. Tuy nhiên, không ai muốn thấy đồ đạc, vật dụng quan trọng của mình bị chó cắn.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="inner-button-bottom">
+        <div class="inner-right">
           <a href="#" class="button-outline">Xem thêm<i class="fa-solid fa-angle-right"></i>
           </a>
         </div>
+      </div>
+      <div class="inner-wrap">
+        <div class="inner-item">
+          <div class="inner-image">
+            <img src="/Lesson 7/Project-1/asset/img/section-4-img-1.jpg" alt="">
+          </div>
+          <div class="inner-content">
+            <div class="inner-tag">
+              Kiến thức thú cưng
+            </div>
+
+            <h3 class="inner-title">
+              Pomeranian là gì? Cách nhận biết chó Pomeranian
+            </h3>
+
+            <p class="inner-desc">
+              Pomeranian hay còn gọi là chó Pomeranian (chó Pom) luôn nằm trong top những thú cưng dễ thương nhất. Không
+              chỉ vậy, giống chó xiếc nhỏ nhắn, đáng yêu, thông minh, thân thiện và khéo léo.
+            </p>
+          </div>
+        </div>
+
+        <div class="inner-item">
+          <div class="inner-image">
+            <img src="/Lesson 7/Project-1/asset/img/section-4-img-2.jpg" alt="">
+          </div>
+          <div class="inner-content">
+            <div class="inner-tag">
+              Kiến thức thú cưng
+            </div>
+
+            <h3 class="inner-title">
+              Pomeranian là gì? Cách nhận biết chó Pomeranian
+            </h3>
+
+            <p class="inner-desc">
+              Việc chia khẩu phần ăn cho chó thoạt nghe có vẻ đơn giản nhưng có một số quy tắc bạn nên biết để chó cưng
+              dễ dàng hấp thụ các chất dinh dưỡng trong khẩu phần ăn. Dành cho những người mới bắt đầu nuôi chó, đặc
+              biệt là chó con mới sinh có sức đề kháng tương đối yếu.
+            </p>
+          </div>
+        </div>
+
+        <div class="inner-item">
+          <div class="inner-image">
+            <img src="/Lesson 7/Project-1/asset/img/section-4-img-3.jpg" alt="">
+          </div>
+          <div class="inner-content">
+            <div class="inner-tag">
+              Kiến thức thú cưng
+            </div>
+
+            <h3 class="inner-title">
+              Pomeranian là gì? Cách nhận biết chó Pomeranian
+            </h3>
+
+            <p class="inner-desc">
+              Chó cắn là hiện tượng phổ biến trong quá trình phát triển. Tuy nhiên, không ai muốn thấy đồ đạc, vật dụng
+              quan trọng của mình bị chó cắn.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="inner-button-bottom">
+        <a href="#" class="button-outline">Xem thêm<i class="fa-solid fa-angle-right"></i>
+        </a>
+      </div>
     </div>
   </section>
   <!-- End section-4 -->
 
-<!-- footer -->
+  <!-- footer -->
   <footer class="footer">
     <div class="container">
       <div class="inner-top">
@@ -511,13 +523,9 @@
       </div>
     </div>
   </footer>
-<!-- End footer -->
+  <!-- End footer -->
+
+  <script src="js/script.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
